[package]
name = "nothing"
version = "0.1.0"
edition = "2021"

[dependencies]
usn-journal-rs = "0.2"
ntfs = "0.4"
ntfs-reader = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
nucleo-matcher = "0.3"
crossterm = "0.28"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemServices",
] }
chrono = "0.4"
walkdir = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
