[package]
name = "nothing"
version = "0.6.1"
edition = "2021"

[lib]
name = "nothing"
path = "src/lib.rs"

[dependencies]
usn-journal-rs = "0.2"
ntfs = "0.4"
ntfs-reader = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
nucleo-matcher = "0.3"
crossterm = "0.28"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemServices",
] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.0"
iced = { version = "0.13", features = ["tokio", "image"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.14"
open = "5.0"

[[bin]]
name = "create_test_index"
path = "src/bin/create_test_index.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
